--- a/src/components/sections/RichText.astro
+++ b/src/components/sections/RichText.astro
@@ -7,11 +7,13 @@ interface Props {
 const { content, className = '' } = Astro.props;
 ---
 
-<section class={`prose prose-lg max-w-none ${className}`}>
-  <div 
-    set:html={content}
-    class="rich-text-content"
-  />
+<section class={`prose prose-lg max-w-none px-4 md:px-6 lg:px-8 ${className}`}>
+  <div class="container mx-auto max-w-4xl">
+    <div 
+      set:html={content}
+      class="rich-text-content"
+    />
+  </div>
 </section>
 
 <style>
